QSortFilterProxyModel: Keep invalid index updated on source model sort

If we have a filter applied that removes all entries, the source
model is sorted, and then we remove the filter, QSortFilterProxyModel
never emits rowsInserted. This is because it doesn't have the correct
source mapping and doesn't update when the filter is removed.

Change-Id: I447b2d150e509b128d27f4dabc4e081ca4ef037f
Task-number: QTBUG-46282
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: db377a420207be84b314b836d2756c57a25d057f https://github.com/qt/qtbase/commit/db377a420207be84b314b836d2756c57a25d057f